# Real-Time-Gaussian-Splatting-Renderer

./: CMakeLists.txt  README.md
src/: main.cpp  model_loader.cpp  model_loader.h
